# pdf-rider

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-msix.ps1  index.html  package-lock.json  package.json  store-metadata.json  vite.config.ts
.github/workflows/: bump.yml  release.yml  store-publish.yml
specs/004-keyboard-shortcuts/: spec.md
specs/004-keyboard-shortcuts/checklists/: requirements.md
specs/005-continuous-flex-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-continuous-flex-layout/checklists/: requirements.md
src/: annotation-store.ts  app.rs  canvas-overlay.ts  compress-modal.ts  i18n.ts  icons.ts  main.rs  main.ts  models.ts  page-manager.ts  pdf-viewer.ts  print-modal.ts  settings.ts  signature-modal.ts  signature-store.ts  split-modal.ts  tauri-bridge.ts  toolbar.ts
src-frontend/: annotation-history.ts  annotation-store.ts  canvas-overlay.ts  i18n.ts  icons.ts  main.ts  models.ts  pdf-viewer.ts  settings.ts  signature-modal.ts  tauri-bridge.ts
src-frontend/styles/: app.css
src-tauri/: AppxManifest.xml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dialog.rs  pdf.rs  shell.rs
src-tauri/src/pdf/: writer.rs
src/__tests__/: pdf-layout.test.ts  split-modal.test.ts
src/annotation/: interaction.rs  mod.rs  store.rs
src/pdf/: compress.rs  mod.rs  models.rs  writer.rs
src/styles/: app.css
src/viewer/: links.rs
ui/: app.slint
