[package]
name = "pdf-reader"
version = "0.2.0"
description = "A simple, lightweight PDF reader with annotations and signing"
authors = []
edition = "2021"

[[bin]]
name = "pdf-reader-portable"
path = "src/main.rs"

[lib]
name = "pdf_reader_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.39"
image = { version = "0.25", features = ["png", "jpeg"] }
base64 = "0.22"
winreg = "0.52"
winapi = { version = "0.3", features = ["winspool", "wingdi"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
